<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_features</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="doychev@kbsg.rwth-aachen.de">userin4o</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cx_clips</depend>
  <depend>cx_core</depend>
  <depend>cx_msgs</depend>
  <depend>cx_utils</depend>
  <depend>PkgConfig</depend>
  <depend>clipsmm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
