<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_features</name>
  <version>0.0.0</version>
  <description>Consists of all features that provide functionality to CLIPS and an implemented manager unit</description>
    
  <maintainer email="doychev@kbsg.rwth-aachen.de">Ivaylo Doychev</maintainer>
  
  <license>GPLv2+ license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cx_clips</depend>
  <depend>cx_core</depend>
  <depend>cx_msgs</depend>
  <depend>cx_utils</depend>
  <depend>cx_blackboard</depend>
  <depend>cx_skill_execution</depend>
  <depend>ClipsPddlParser</depend>
  <depend>PkgConfig</depend>
  <depend>clipsmm</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_planner</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <cx_core plugin="${prefix}/features_plugins.xml"/>
  </export>
</package>
