<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_ros_comm_gen</name>
  <version>0.1.0</version>

  <description>Generate CLIPS bindings to use ROS messages, actions and services</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>

  <license>Apache License 2.0</license>

  <depend>python3-jinja2</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
