<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_config_feature</name>
  <version>0.0.0</version>
  <description>Consists of all features that provide functionality to CLIPS and an implemented manager unit</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>

  <license>GPLv2+ license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cx_core</depend>
  <depend>cx_utils</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cx_core plugin="${prefix}/config_feature_plugin.xml"/>
  </export>
</package>
