<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_example_feature</name>
  <version>0.1.0</version>
  <description>CLIPS feature example that does not actually do anything and rather serves as boilerplate.</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>

  <license>GPLv2+ license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>cx_feature</depend>
  <depend>cx_utils</depend>
  <depend>clips_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cx_feature plugin="${prefix}/example_feature_plugin.xml"/>
  </export>
</package>
